@@ -6,6 +6,7 @@
 === Breaking changes
 
 • Remove support for Go < v1.10 (v1.5 - v1.9).
+• Rename `getoptions.Option` to `getoptions.Value`.
 
 === New Features
 
